src/App.scss
* {
  margin: 0;
  padding: 0;
  font-family: 'Lato', sans-serif;
  box-sizing: border-box;
}

body {
  background-color: white;
}

.container {
  max-width: 1280px;
  margin: 0 auto;
}

.hero {
  width: 100%;
  height: 740px;
  color: white;
  background-image: url('./assets/francisco.png');
  background-position: 50%;
  background-size: cover;
  background-repeat: no-repeat;
  header {
    width: 100%;
    padding: 0 120px;
    .main__navbar {
      width: 100%;
      max-height: 100px;
      margin: 0 auto;
      display: flex;
      justify-content: space-between;
      align-items: center;
      background: linear-gradient(180deg, rgba(#333333, 0.7) 0%, rgba(#333333, 0.4) 40%, rgba(#333333, 0) 100%);
      ul {
        padding: 40px 0;
        list-style: none;
        display: flex;
        justify-content: end;
        li {
          padding-right: 50px;
          font-size: 16px;
          font-weight: 300;
          line-height: 19px;
        }
        li:last-child {
          padding-right: 0;
        }
      }
    }
    @media screen and (max-width: 768px) {
      padding: 0 40px;
    }
    @media screen and (max-width: 500px) {
      padding: 0 20px;
    }
  }
  
  .main__title {
    font-size: 32px;
    font-weight: normal;
  }

  &__card {
    max-width: 500px;
    max-height: 450px;
    margin: 70px 0 70px 120px;
    background: rgba(0, 0, 0, 0.2);
    backdrop-filter: blur(30px);
    @media screen and (max-width: 768px) {
      margin: 30px 40px;
    }
    @media screen and (max-width: 500px) {
      margin: 25px 20px;
    }
    &-content {
      padding: 40px;
      small {
        font-size: 16px;
        font-weight: 300;
      }
      h2 {
        font-size: 60px;
        font-weight: 500;
        padding-bottom: 20px;
        @media screen and (max-width: 500px) {
          font-size: 40px;
        }
      }
      p {
        font-size: 21px;
        font-weight: 300;
        line-height: 24px;
        padding-right: 20px;
        @media screen and (max-width: 500px) {
          font-size: 16px;
        }
        i, a {
          padding-top: 20px;
          padding-bottom: 25px;
          color: white;
          font-size: 14px;
          font-weight: 300;
          @media screen and (max-width: 500px) {
            font-size: 12px;
          }
        }
      }
    }
    .hero__votes {
      width: 100%;
      max-height: 80px;
      display: flex;
      font-size: 38px;
      .votes__up, .votes__down {
        height: 100%;
        min-width: 50%;
        display: flex;
        justify-content: center;
        align-items: center;
      }
      .votes__up {
        background-color: rgba(44,187,180,.7);
      }
      .votes__down {
        background-color: rgba(255,173,29,.8);
      }
    }
  }

  &__days-remained {
    width: 100%;
    height: 51px;
    display: flex;
    .closing__p {
      width: 37%;
      padding-right: 10px;
      display: flex;
      justify-content: flex-end;
      align-items: center;
      text-transform: uppercase;
      background-color: rgba(0, 0, 0, 0.2);
      font-size: 13px;
    }
    .closing__days {
      width: 63%;
      padding-left: 10px;
      display: flex;
      justify-content: flex-start;
      align-items: center;
      background-color: rgba(255, 255, 255, 0.6);
      font-size: 37px;
      color: #464646;
      span {
        font-weight: 300;
      }
    }
  }
}

main {
  padding: 0 120px;
  @media screen and (max-width: 768px) {
    padding: 0 40px;
  }
  @media screen and (max-width: 500px) {
    padding: 0 20px;
  }
  .main__info {
    height: 100px;
    margin: 35px 0;
    padding: 25px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #ebebeb;
      .info__title {
        width: 35%;
        font-size: 22px;
        @media screen and (max-width: 768px) {
          font-size: 14px;
        }
        @media screen and (max-width: 500px) {
          width: 80%;
        }
        h3 {
          font-size: 37px;
          @media screen and (max-width: 768px) {
            font-size: 20px;
          }
        }
      }
      .info__description {
        font-size: 15px;
        font-weight: 300;
        line-height: 23px;
        @media screen and(max-width: 500px) {
          display: none;
        }
      }
      .info__close {
        font-size: 40px;
        cursor: pointer;
      }
  }
  .previous__rulings {
    h2 {
      margin-bottom: 40px;
      font-size: 40px;
      font-weight: 300;
    }
    .cards__container {
      display: grid;
      grid-template-columns: repeat(auto-fill,minmax(360px,1fr));
      grid-gap: 40px;
      .card__rouling {
        width: 100%;
        height: 550px;
        display: flex;
        flex-direction: column;
        justify-content: flex-end;
        overflow: hidden;
        background-size: cover;
        background-repeat: no-repeat;
        background-position: center;
        .card__content {
          color: white;
          background: linear-gradient(0deg,rgba(51,51,51,.7),rgba(51,51,51,.7) 40%,rgba(51,51,51,0));
          .card__title {
            display: flex;
            justify-content: flex-start;
            align-items: center;
            .card__hand-thumbs {
              width: 32px;
              height: 32px;
              display: flex;
              justify-content: center;
              align-items: center;
              margin-right: 5px;
            }
            .card__name {
              h4 {
              font-size: 45px;
              font-weight: normal;
              }
            }
          }
          .card__info {
            padding-left: 40px;
            margin-bottom: 20px;
            span {
              width: 100px;
              font-size: 12px;
              text-align: end;
            }
          }
          .card__description {
            padding-left: 40px;
            p {
              margin-bottom: 20px;
              font-size: 16px;
              font-weight: 300;
            }
          }
          .card__vote {
            height: 40px;
            padding-left: 40px;
            padding-right: 20px;
            margin-bottom: 30px;
            display: flex;
            justify-content: flex-start;
            align-items: center;
            .votes {
              display: flex;
              .votes__positive, .votes__negative {
                width: 30px;
                height: 30px;
                margin-right: 10px;
                display: flex;
                justify-content: center;
                align-items: center;
              }
              .votes__positive {
                background-color: #1cbbb4;
              }
              .votes__negative {
                background-color: #ffad1d;
              }
            }
            button {
              width: 100px;
              height: 100%;
              font-family: 'Lato', sans-serif;
              font-size: 14px;
              background-color: Transparent;
              background-repeat:no-repeat;
              border: 1px solid white;
              cursor:pointer;
              overflow: hidden;
              outline:none;
              color: white
            }
          }
          .card__votes-results {
            width: 100%;
            height: 50px;
            display: flex;
            font-size: 30px;
          }
          .votes__up, .votes__down {
            height: 100%;
            display: flex;
            justify-content: center;
            align-items: center;
            span {
              margin-left: 5px;
              font-weight: 300;
            }
          }
          .votes__up {
            width: 64%;
            background-color: rgba(44,187,180,.7);
          }
          .votes__down {
            width: 36%;
            background-color: rgba(255,173,29,.8);
          }
        }
      }
    }
  }
  .submit__name {
    width: 100%;
    height: 80px;
    margin-top: 30px;
    margin-bottom: 40px;
    display: flex;
    background-image: url('./assets/city.png');
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    .submit__container {
      width: 100%;
      padding: 0 20px;
      display: flex;
      justify-content: space-between;
      align-items: center;
      background-color: rgba(255, 255, 255, 0.8);
      .submit__info p {
        font-size: 30px;
        font-weight: 300;
        color: #333333;
        @media screen and (max-width: 500px) {
          display: none;
        }
      }
      .submit__button {
        button {
          width: 200px;
          height: 50px;
          font-family: 'Lato', sans-serif;
          font-size: 20px;
          background-color: Transparent;
          border: 2px solid #333333;
          cursor:pointer;
          overflow: hidden;
          outline:none;
          color: #333333;
        }
      }
    }
  }
}

footer {
  width: 100%;
  height: 100px;
  .footer__container {
    padding: 30px 0;
    margin: 0 120px;
    display: flex;
    justify-content: space-between;
    align-self: center;
    border-top: 1px dashed #979797;
    font-size: 12px;
    font-weight: 300;
    color: #333333;
    @media screen and (max-width: 768px) {
      margin: 0 40px;
    }
    @media screen and (max-width: 500px) {
      margin: 0 20px;
    }
    .footer__nav {
      ul {
        display: flex;
        justify-content: space-between;
        list-style: none;
        li {
          margin-right: 30px;
          cursor: pointer;
        }
      } 
    }
    .footer__socials {
      display: flex;
      justify-content: space-between;
      align-items: center;
      p, i {
        margin-left: 20px;
      }
      i {
        font-size: 25px;
        cursor: pointer;
      }
    }
  }
}

.kanye {
  background-image: url('./assets/kanye.png');
}
.mark {
  background-image: url('./assets/mark.png');
}
.cristina {
  background-image: url('./assets/cristina.png');
}
.malala {
  background-image: url('./assets/malala.png');
}

.up {
  background-color: #1cbbb4;
}

.down {
  background-color: #ffad1d;
}

